@@ -1,41 +1,0 @@
-/*          -*- text -*-
-
-    (c-mode can't figure this mess out)
-*/
-
-/* sorry about this.
-
-   because we want to use this code twice, once in highly
-   optimiz(able) form for use on the server and in non-interactive
-   solution verification, and once in interactive form, returning
-   animations, we need to generate two different functions from the
-   same source. (It's also important to minimize the amount of
-   dependencies that the server code has.) The two choices in C are to
-   make the function a macro, or to use this include hack.
-
-   If this code is included with ANIMATING_MOVE defined, then
-   it generates a function move_animate, otherwise it generates
-   plain ol' move.
-*/
-
-// Notes for templatizing this thing, 2016:
-// Two goals overall:
-//   - efficient version of move() that doesn't pay for animation
-//   - ability to compile level without dependency on SDL.
-//
-// ...
-// Before I started on 27 Aug 2016, tom7 had 1282/2509 Triage levels solved,
-// and 485/803 minor leagues, plus obviously 34/34 regressions and 22/22
-// official levels.
-
-using AList = PtrList<aevent>;
-
-#ifdef ANIMATING_MOVE
-# include "util.h"
-# include "aevent.h"
-
-#endif
-
-
-
-
